2008-03-12 [colin]	0.17.1cvs5

	* libgtkhtml/layout/htmlboxtext.c
		Fix warning

2008-02-28 [colin]	0.17.1cvs4

	* libgtkhtml/document/htmlparser.c
		Remove raw printf

2008-02-20 [paul]	0.17.1cvs3

	* src/gtkhtml2_viewer.c
		hide noticeview when clearing viewer

2008-02-11 [colin]	0.17.1cvs2

	* libgtkhtml/Makefile.am
	* libgtkhtml/css/Makefile.am
	* libgtkhtml/document/Makefile.am
	* libgtkhtml/dom/Makefile.am
	* libgtkhtml/dom/core/Makefile.am
	* libgtkhtml/dom/events/Makefile.am
	* libgtkhtml/dom/html/Makefile.am
	* libgtkhtml/dom/html/Makefile.in
	* libgtkhtml/dom/traversal/Makefile.am
	* libgtkhtml/dom/views/Makefile.am
	* libgtkhtml/graphics/Makefile.am
	* libgtkhtml/layout/Makefile.am
	* libgtkhtml/layout/html/Makefile.am
	* libgtkhtml/util/Makefile.am
	* libgtkhtml/view/Makefile.am
		And don't install includes

2008-02-11 [colin]	0.17.1cvs1

	* AUTHORS
	* Makefile.am
	* configure.ac
	* libgtkhtml/.cvsignore
	* libgtkhtml/Makefile.am
	* libgtkhtml/gtkhtml.h
	* libgtkhtml/gtkhtmlcontext.c
	* libgtkhtml/gtkhtmlcontext.h
	* libgtkhtml/a11y/.cvsignore
	* libgtkhtml/a11y/Makefile.am
	* libgtkhtml/a11y/htmlaccessiblefactory.h
	* libgtkhtml/a11y/htmlboxaccessible.c
	* libgtkhtml/a11y/htmlboxaccessible.h
	* libgtkhtml/a11y/htmlboxblockaccessible.c
	* libgtkhtml/a11y/htmlboxblockaccessible.h
	* libgtkhtml/a11y/htmlboxblocklinkaccessible.c
	* libgtkhtml/a11y/htmlboxblocklinkaccessible.h
	* libgtkhtml/a11y/htmlboxblocktextaccessible.c
	* libgtkhtml/a11y/htmlboxblocktextaccessible.h
	* libgtkhtml/a11y/htmlboxembeddedaccessible.c
	* libgtkhtml/a11y/htmlboxembeddedaccessible.h
	* libgtkhtml/a11y/htmlboxtableaccessible.c
	* libgtkhtml/a11y/htmlboxtableaccessible.h
	* libgtkhtml/a11y/htmlboxtextaccessible.c
	* libgtkhtml/a11y/htmlboxtextaccessible.h
	* libgtkhtml/a11y/htmlboxtextlinkaccessible.c
	* libgtkhtml/a11y/htmlboxtextlinkaccessible.h
	* libgtkhtml/a11y/htmllinkaccessible.c
	* libgtkhtml/a11y/htmllinkaccessible.h
	* libgtkhtml/a11y/htmlviewaccessible.c