@@ -91,3 +91,4 @@
 ( cvs diff -u -r 1.1.2.67 -r 1.1.2.68 src/gtkhtml2_viewer.c;  ) > 0.17.1cvs3.patchset
 ( cvs diff -u -r 1.1.2.1 -r 1.1.2.2 libgtkhtml/document/htmlparser.c;  ) > 0.17.1cvs4.patchset
 ( cvs diff -u -r 1.1.2.1 -r 1.1.2.2 libgtkhtml/layout/htmlboxtext.c;  ) > 0.17.1cvs5.patchset
+( cvs diff -u -r 1.1.2.68 -r 1.1.2.69 src/gtkhtml2_viewer.c;  ) > 0.17.1cvs6.patchset
